# The-Vault

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  add-library.sh  db.js  docker-compose.yml  server.js  setup-from-github.sh  update.sh
.github/: FUNDING.yml
.github/workflows/: docker-publish.yml  native-build.yml
backend/: Dockerfile  db.js  jest.config.js  organize.js  package.json  scan-worker.js  scanner.js  scraper.js  server.js  version.json
backend/tests/: api.test.js  scanner.test.js  scraper.test.js  setup.js
docs/: native-app-workplan.md
frontend/: nginx.conf  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js  setupTests.js
frontend/src/components/: ClaudeAssistant.js  FolderRoles.js  FolderTree.js  OrganizeModal.js  ReleaseFileList.js  RenderHintPanel.js  ScanModal.js  Sidebar.js  Sidebar.test.js  StlViewer.js  TagManager.js  TaskLog.js  ZipImagePicker.js
frontend/src/pages/: Gallery.js  Gallery.js.bak  Gallery.test.js  ModelDetail.js  ModelDetail.test.js  PrintQueue.js  Wishlist.js
native/: .gitignore  README.md  package.json
native/scripts/: bundle-backend.sh
native/src-tauri/: Cargo.toml  tauri.conf.json
native/src-tauri/capabilities/: default.json
native/src-tauri/src/: main.rs
